src/test/resources/typeSystemTestModels/valid/methods/MethodHiding.java
package typeSystemTestModels.valid.methods;

public class MethodHiding extends MethodBodyAbsenceAndPresence{

  public static String getString2(){
    return  "Hello";
  }
}