src/test/resources/typeSystemTestModels/invalid/methods/MethodHiding.java
package typeSystemTestModels.invalid.methods;

public class MethodHiding extends AbstractMethodDefinition {

  public static String getString(){
    return "String";
  }

}
